fix:修复教务系统在非校园网下无法访问；将教务系统类服务提取为Model并且应用在教务系统类服务